# infralink

./: .gitignore  Cargo.toml  Dockerfile
.cargo/: config.toml
src/api/: Cargo.toml
src/api/src/: main.rs
src/api/src/routes/: master.rs  mod.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs  parser.rs  setup.rs
src/cli/src/commands/: init.rs  mod.rs
src/master/: Cargo.toml
src/master/src/: main.rs  state.rs
src/master/src/models/: new.rs
src/master/src/routes/: mod.rs  new.rs
src/prisma/: Cargo.toml  dev.db  dev.db-journal  schema.prisma
src/prisma/migrations/20221112152022_init_master/: migration.sql
src/shared/: Cargo.toml
src/shared/src/: lib.rs  node_type.rs
