[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.21.2", features = ["full"] }
strum = { version = "0.24.1", features = ["derive"] }
async-trait = "0.1.58"
dirs = "4.0.0"
requestty = "0.5.0"
colored = "2.0.0"
