[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24.1", features = ["derive"] }
colored = "2.0.0"
prisma-client-rust = { workspace = true, features = ["sqlite", "migrations"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
